--- a/MvcPL/Views/User/Details.cshtml
+++ b/MvcPL/Views/User/Details.cshtml
@@ -56,8 +56,8 @@
         </div>
     </div>
 
-    <div id="modal_form">
-        <span id="modal_close">X</span>
+    <div id="modal_form" class="modal_form">
+        <span id="modal_close" name="modal_close">X</span>
         <h4 class="modal-title" id="myModalLabel">Block user</h4>
         <div class="modal-body">
             @Html.Partial("~/Views/Admin/_BlockWindow.cshtml")
