Edit user profile

--- a/MvcPL/Views/Account/Register.cshtml
+++ b/MvcPL/Views/Account/Register.cshtml
@@ -12,7 +12,7 @@
 
 @section Body
 {
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new {@class = "form-horizontal", role = "form"}))
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new {@class = "form-horizontal", role = "form", enctype="multipart/form-data"}))
     {
         @Html.AntiForgeryToken()
         <div class="form-group">
@@ -43,6 +43,21 @@
                 @Html.ValidationMessageFor(m => m.ConfirmPassword, null, new {@class = "text-danger"})
             </div>
         </div>
+
+        <div class="form-group">
+            @Html.Label("Avatar", new { @class = "col-md-5 control-label" })
+            <div class="col-md-7 form-inline text-left">
+                <div class="fileupload fileupload-new col-md-5" data-provides="fileupload">
+                    <span class="btn btn-file btn-sm">
+                        <span class="fileupload-new" style="padding-left: 0;">Select new photo</span>
+                        <span class="fileupload-exists" style="padding-left: 0;">Change uploaded photo</span> <input type="file" id="logo" name="Photo" />
+                    </span>
+                    <span class="fileupload-preview"></span>
+                    <a href="#" class="close fileupload-exists" data-dismiss="fileupload" id="removeLogoSmallButton" style="float: none; color: black;">×</a>
+                </div>
+            </div>
+        </div>
+
         @Html.ValidationSummary(true, "", new {@class = "text-danger"})
         <div class="form-group">
             <div class="col-md-12">
