--- a/MvcPL/Views/Lot/Index.cshtml
+++ b/MvcPL/Views/Lot/Index.cshtml
@@ -17,7 +17,7 @@
                     <div class="panel-body">
                         <div>
                             <a href="@Url.Action("CreateLot", "Lot")" class="btn btn-sm col-sm-4">Create lot</a>
-                            <button class="btn btn-sm col-sm-7 col-sm-offset-1">Show my lots</button>
+                            <a href="@Url.Action("UserLots", "Lot")" class="btn btn-sm col-sm-7 col-sm-offset-1">Show my lots</a>
                         </div>
 
                     </div>
