--- a/MvcPL/Views/Lot/LotDetails.cshtml
+++ b/MvcPL/Views/Lot/LotDetails.cshtml
@@ -204,8 +204,8 @@
                                         </p>
                                         if (Model.IsBlocked && !Model.IsConfirm)
                                         {
-                                            <p class="form-inline">
-                                                Block reason  <button class="btn btn-sm" style="margin-left: 30px;" id="showBlockReason">Show</button>
+                                            <p class="form-inline" id="moderatorPanel">
+                                                Block reason : <button class="btn btn-sm" style="margin-left: 30px;" id="showBlockReason">Show</button>
                                             </p>
                                         }
                                     }
