--- a/MvcPL/Views/Shared/_Layout.cshtml
+++ b/MvcPL/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jqueryval")
 </head>
 <body>
     <header id="top-bar" class="navbar-fixed-top">
