--- a/MvcPL/Views/User/Details.cshtml
+++ b/MvcPL/Views/User/Details.cshtml
@@ -30,14 +30,14 @@
                         <img src="~/Content/images/default_avatar.jpg" class="img-circle" />
                     }
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 text-center">
                     @Html.HiddenFor(m => m.IsBlocked, Model.IsBlocked)
                     <br/>
                     <span>User status : </span>
                     <span id="blockSign" class="glyphicon@(Model.IsBlocked ? " glyphicon-lock" : " glyphicon-ok-circle")" aria-hidden="true"></span>
                     <br/>
                     <span class="sm" id="blockUntil">@(Model.IsBlocked ? "until " + Model.BlockDate.ToString("dd/MM/yyyy") : "")</span>
-                    @if (!Model.Roles.Contains(Role.Administrator))
+                    @if (!(Model.Roles.Contains(Role.Administrator) || Model.Roles.Contains(Role.Moderator)))
                     {
                         <button class="btn btn-sm" id="blockButton">@(Model.IsBlocked ? "Unblock " : "Block ")user</button>
                     }
@@ -57,7 +57,11 @@
                     @Html.LabelFor(m => m.CreationDate, new {@class = "col-sm-4 control-label"})
                     <span class="col-sm-6">@Model.CreationDate.ToString("dd/MM/yyyy")</span>
                 </div>
-
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">User lots</label>
+                    <span class="col-sm-6"><a href="@Url.Action("UserLots", "Lot", new {userId = Model.Id})" class="btn btn-sm">Show</a></span>
+                </div>
+                
             </div>
             <div class="col-md-3"></div>
         </div>
