--- a/MvcPL/Views/Lot/LotDetails.cshtml
+++ b/MvcPL/Views/Lot/LotDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@using MvcPL.Models
+﻿@using MvcPL.Infrastructure.Mappers
+@using MvcPL.Models
 @model MvcPL.Models.LotDetailsViewModel
 
 @{
@@ -7,7 +8,11 @@
 
 @section Body
 {
-
+<style>
+    .borderedImg {
+        border: 3px solid #00a8e1;
+    }
+</style>
     <div>
         <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#mainInfo" aria-controls="mainInfo" role="tab" data-toggle="tab">Lot info</a></li>
@@ -165,7 +170,110 @@
                     </div>
                 </div>
             </div>
-            <div role="tabpanel" class="tab-pane" id="photo">...</div>
+            <div role="tabpanel" class="tab-pane" id="photo">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3>Photos</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div id="carousel-example-generic" class="carousel slide col-sm-7 col-sm-offset-1" data-ride="carousel">
+                                <!-- Indicators -->
+                                @*<ol class="carousel-indicators">
+                                    @if (Model.Photos == null || Model.Photos.Count() == 0)
+                                    {
+                                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                    }
+                                    else
+                                    {
+                                         foreach (var photo in Model.Photos)
+                                         {
+                                             
+                                         }
+                                    }
+                                </ol>*@
+
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner">
+                                    @if (Model.Photos == null || Model.Photos.Count() == 0)
+                                    {
+                                        <div class="item active">
+                                            <img src="~/Content/images/1.jpg" alt="slider">
+                                            <div class="carousel-caption">
+                                                There are no images.
+                                            </div>
+                                        </div>
+                                    }
+                                    else
+                                    {
+
+                                        for (var i = 0; i < Model.Photos.Count(); i++)
+                                        {
+                                            if (i == 0)
+                                            {
+                                                <div class="item active">
+                                                    @Html.Raw("<img src=\"data:image/jpeg;base64," + Convert.ToBase64String(Model.Photos.ElementAt(i).ImageToByteArray()) + "\" />")
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <div class="item">
+                                                    @Html.Raw("<img src=\"data:image/jpeg;base64," + Convert.ToBase64String(Model.Photos.ElementAt(i).ImageToByteArray()) + "\" />")
+                                                </div>
+                                            }
+                                        }
+                                    }
+                                    @*<div class="item">
+                                <img src="~/Content/images/slider.jpg" alt="slider">
+                                <div class="carousel-caption">
+                                    Second
+                                </div>
+                            </div>*@
+                                </div>
+
+                                <!-- Controls -->
+                                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                </a>
+                                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                </a>
+                            </div>
+                            @if (Model.SellerLogin == User.Identity.Name)
+                            {
+                                <div class="col-sm-4">
+                                    <div class="panel panel-info text-left">
+                                        <div class="panel-heading form-group text-center" style="height: 40px;">
+                                            <span>Add image</span>
+                                        </div>
+                                        <form class="panel-body" id="imageForm" enctype="multipart/form-data" action="@Url.Action("SaveImages", "Lot", new {lotId = Model.Id})" method="POST">
+                                            <div class="row" id="photoRow">
+                                                @for (var i = 0; i < Model.Photos.Count(); i++)
+                                                {
+                                                    <div class="form-group col-sm-6 text-center">
+                                                        @Html.Raw("<img class=\"img-thumbnail\" style = \"height: 140px; width: 140px;\" src=\"data:image/jpeg;base64," + Convert.ToBase64String(Model.Photos.ElementAt(i).ImageToByteArray()) + "\" id=\"lotImg" + (i + 1) + "\" name=\"lotImg\"/>")
+                                                        @*<img src="/Content/images/No_image_available.jpg" alt="Current logo" style="width: 140px; height: 140px;" class="img-thumbnail" id="lotImg1" name="lotImg">*@
+                                                        <div class="fileupload fileupload-new" data-provides="fileupload" style="margin-top: 5px;">
+                                                            <span class="btn btn-sm btn-file">
+                                                            <span class="fileupload-new">Select</span><span class="fileupload-exists">Change</span>         <input type="file" id="imgFile@(i + 1)" name="logoFile">
+                                                        </span><span class="fileupload-preview"></span><a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
+                                                        </div>
+                                                    </div>
+                                                }
+                                            </div>
+                                            <div class="row text-center">
+                                                <button type="button" class="btn" id="addImageButton">Add</button>
+                                                <input type="submit" class="btn" id="saveButton" value="Save"/>
+                                                <button type="button" class="btn" id="deleteSelectedImagesButton" style="display: none;">Delete</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div role="tabpanel" class="tab-pane" id="moderatorInfo">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -288,6 +396,98 @@
             $("#modal_close").trigger("click");
         });
 
+        $('.carousel').carousel({
+            interval: 5000
+        });
+
+
+
+        var imgCount = $("[name='lotImg']").length;
+
+        if (imgCount === 0) {
+            $("#saveButton").hide();
+        }
+
+        $('body').on('click', "[name='lotImg']", function () {
+            var currentId = "#" + $(this).attr('id');
+            if ($(currentId).hasClass("borderedImg")) {
+                $(currentId).removeClass("borderedImg");
+            } else {
+                $(currentId).addClass("borderedImg");
+            }
+            if ($(".borderedImg").length > 0) {
+                $("#deleteSelectedImagesButton").show();
+            } else {
+                $("#deleteSelectedImagesButton").hide();
+            }
+        });
+
+        $("#deleteSelectedImagesButton").click(function () {
+            $(".borderedImg").parent().remove();
+            if ($(".borderedImg").length > 0) {
+                $("#deleteSelectedImagesButton").show();
+            } else {
+                $("#deleteSelectedImagesButton").hide();
+            }
+            if ($("[name='lotImg']").length == 0) {
+                $("#saveButton").hide();
+            }
+        });
+
+        $("#addImageButton").click(function () {
+            imgCount++;
+            $("#photoRow").append('<div class="form-group col-sm-6 text-center">' +
+                                                '<img src="@Url.Content("~/Content/images/No_image_available.jpg")" alt="Current logo" style="width: 140px; height: 140px;" class="img-thumbnail" id="lotImg' + (imgCount) + '" name="lotImg">' +
+                                                '<div class="fileupload fileupload-new" data-provides="fileupload" style="margin-top: 5px;">' +
+                                                    '<span class="btn btn-sm btn-file">' +
+                                                        '<span class="fileupload-new">Select</span>' +
+                                                        '<span class="fileupload-exists">Change</span>         <input type="file" id="imgFile' + (imgCount) + '" name="logoFile" />' +
+                                                    '</span>' +
+                                                    '<span class="fileupload-preview"></span>' +
+                                                    '<a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>' +
+                                                '</div>' +
+                                            '</div>');
+            if ($("[name='lotImg']").length > 0) {
+                $("#saveButton").show();
+            }
+        });
+
+        $('body').on('change', "[name='logoFile']", function () {
+            readURL(this);
+        });
+
+        $('body').on('click', ".close", function () {
+            $(this).parent().parent().children("img").attr("src", "@Url.Content("~/Content/images/No_image_available.jpg")");
+        });
+
+        $("#imageForm").submit(function () {
+            debugger;
+            var files = $("[name='logoFile']");
+            if (files.length == 0) {
+                return false;
+            }
+            for (var i = 0; i < files.length; i++)
+            {
+                if (files[i].value.length == 0) {
+                    return false;
+                }
+            }
+            return true;
+        });
+
+
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                debugger;
+                reader.onload = function (e) {
+                    debugger;
+                    $("#" + input.id).parent().parent().parent().children("img").attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
     </script>
 }
 
